Migración completa a Java: Proyecto SyncUp según especificaciones del PDF